--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "dependencies": {
     "@nuxt/content": "^2.13.2",
     "nuxt": "^3.13.0"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.78.0"
   }
 }
