--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.13.2",
+    "@nuxtjs/i18n": "^8.5.3",
     "nuxt": "^3.13.0"
   },
   "devDependencies": {
