--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@nuxt/content": "^2.13.2",
     "@nuxtjs/i18n": "^8.5.3",
-    "nuxt": "^3.13.0"
+    "nuxt": "^3.13.0",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "sass-embedded": "^1.78.0"
