--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.13.2",
+    "@nuxt/image": "^1.8.0",
     "@nuxtjs/i18n": "^8.5.3",
+    "lodash-es": "^4.17.21",
     "nuxt": "^3.13.0",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "sass-embedded": "^1.78.0"
   }
 }
