--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
+    "@dafcoe/vue-collapsible-panel": "^0.2.0",
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.8.0",
+    "@nuxt/scripts": "^0.9.2",
     "@nuxtjs/i18n": "^8.5.3",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.13.0",
+    "nuxt-easy-lightbox": "^1.0.2",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
