--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -16,11 +16,15 @@ jobs:
       - run: npm install
       - run: npx nuxt build --preset github_pages
         env:
-          NUXT_APP_BASE_URL: /${{ github.event.repository.name }}/
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+          NUXT_APP_BASE_URL: /
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@v0.1.7
         with:
-          path: ./.output/public
+          host: ${{ secrets.IIONOS_SSH_HOST }}
+          username: ${{ secrets.IIONOS_SSH_USER }}
+          password: ${{ secrets.IIONOS_SSH_PWD }}
+          source: "./.output/public"
+          target: "/"
   # Deployment job
   deploy:
     # Add a dependency to the build job
