--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npx nuxt build --preset github_pages
         env:
           NUXT_APP_BASE_URL: /
-      - name: copy file via ssh password
+      - name: IIONOS SFTP 
         uses: Creepios/sftp-action@v1.0.3
         with:
           host: ${{ secrets.IIONOS_SSH_HOST }}
@@ -25,21 +25,3 @@ jobs:
           password: ${{ secrets.IIONOS_SSH_PWD }}
           localPath: "./.output/public"
           remotePath: "/"
-  # Deployment job
-  deploy:
-    # Add a dependency to the build job
-    needs: build
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-    # Deploy to the github_pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    # Specify runner + deployment step
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
